syntax = "proto3";

package user.v1;

option go_package = "github.com/yourusername/golang/internal/interfaces/grpc/proto/userpb";

import "google/protobuf/timestamp.proto";

// 用户服务
service UserService {
  // 获取用户
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  // 列出用户（流式）
  rpc ListUsers(ListUsersRequest) returns (stream User);
}

// 用户消息
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// 请求消息
message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}
